--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     </div>
 
                     <div class="social">
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://linkedin.com/in/vrizzoap"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/vrioap"><i class="fa-brands fa-github"></i></a>
                     </div>
                  </div>
             </div>
