--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 <div class="details-containers">
                     <div class="contact-container">
                         <div class="contact-info">
-                            <div><i class="fa fa-envelope"></i>Email: example@email.com</div>
-                            <div><i class="fa-brands fa-whatsapp"></i>WhatsApp: +62 812-3456-7890</div>
-                            <div><i class="fa-brands fa-facebook"></i>Facebook: fb.me/example</div>
-                            <div><i class="fa-brands fa-instagram"></i>Instagram: instagram.com/example</div>
+                           <div><i class="fa fa-envelope"></i><div class="text">Email: example@email.com</div></div>
+                            <div><i class="fa-brands fa-whatsapp"></i><div class="text">WhatsApp: +62 812-3456-7890</div></div>
+                            <div><i class="fa-brands fa-facebook"></i><div class="text">Facebook: fb.me/example</div></div>
+                            <div><i class="fa-brands fa-instagram"></i><div class="text">Instagram: instagram.com/example</div></div>
                         </div>
                     
                         <form class="contact-form" action="process.php" method="POST">
