--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 <div class="details-containers">
                     <div class="contact-container">
                         <div class="contact-info">
-                           <div><i class="fa fa-envelope"></i><div class="text">Email: example@email.com</div></div>
-                            <div><i class="fa-brands fa-whatsapp"></i><div class="text">WhatsApp: +62 812-3456-7890</div></div>
-                            <div><i class="fa-brands fa-facebook"></i><div class="text">Facebook: fb.me/example</div></div>
-                            <div><i class="fa-brands fa-instagram"></i><div class="text">Instagram: instagram.com/example</div></div>
+                           <div><i href="https://mail.google.com/mail/?view=cm&fs=1&to=ijonggg5@email.com&su=Judul&body=Pesan%20anda" class="fa fa-envelope></i><div class="text">Email: ijonggg5@email.com</div></div>
+                            <div><i class="fa-brands fa-whatsapp"></i><div class="text">WhatsApp: +62 852-2084-9636</div></div>
+                            <div><i class="fa-brands fa-facebook"></i><div class="text">Facebook: facebook.com/joo.skibidi</div></div>
+                            <div><i class="fa-brands fa-instagram"></i><div class="text">Instagram: instagram.com/y6riz3_</div></div>
                         </div>
                     
                         <form class="contact-form" action="process.php" method="POST">
